// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Chinese characters correctly 1`] = `
<button
  class="wmstool-btn"
  type="button"
>
  <span>
    按 钮
  </span>
</button>
`;

exports[`Button renders Chinese characters correctly 2`] = `
<button
  class="wmstool-btn"
  type="button"
>
  <i
    class="anticon anticon-search"
  />
  <span>
    按钮
  </span>
</button>
`;

exports[`Button renders Chinese characters correctly 3`] = `
<button
  class="wmstool-btn"
  type="button"
>
  <i
    class="anticon anticon-search"
  />
  <span>
    按钮
  </span>
</button>
`;

exports[`Button renders correctly 1`] = `
<button
  class="wmstool-btn"
  type="button"
>
  <span>
    Follow
  </span>
</button>
`;

exports[`Button should support link button 1`] = `
<a
  class="wmstool-btn"
  href="http://ant.design"
  target="_blank"
>
  <span>
    link button
  </span>
</a>
`;
